# vedraw

./: .gitignore  CMakeLists.txt  Readme.txt
src/: main.cpp
src/app/: app_info.cpp  app_info.h
src/basic/: defs.cpp  defs.h  image.cpp  image.h
src/branches/: commit.h
src/colors/: arithmetic_color_transform.cpp  arithmetic_color_transform.h  color.h  color_components.cpp  color_components.h  color_transform.h  simple_color_transforms.cpp  simple_color_transforms.h
src/drawing/: commit.cpp  commit.h  commit_history.cpp  commit_history.h  drawing.cpp  drawing.h
src/geometry/: geometric_transform.h  projective_transform.cpp  projective_transform.h
src/gui/: commit_history_widget.cpp  commit_history_widget.h  drawing_view.cpp  drawing_view.h  main_window.cpp  main_window.h  modifiers_applier.cpp  modifiers_applier.h
src/gui/utils/: gui_error_handling.cpp  gui_error_handling.h
src/modifiers/: modifier.h
src/modifiers/filters/: color_map_filter.cpp  color_map_filter.h  filter.h
src/modifiers/painting/: pen.h
src/utils/: cartesian_call.h  cpp_extensions.h  debug_utils.cpp  debug_utils.h  error_handling.cpp  error_handling.h  opencv_type_traits.h  q_const_pointer.h  qt_extensions.cpp  qt_extensions.h
